--- a/templates/base.html
+++ b/templates/base.html
@@ -8,11 +8,21 @@
     {% endblock %}
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/8e8a0aa5cf.js" crossorigin="anonymous"></script>
 
     <title>GPR {%block title %}{% endblock %}</title>
   </head>
-  <body>
-    <h1>Grupo Pierola Romania</h1>
+  <body class="text-white" style="background-color: black;">
+      <header >
+        <div class="navbar">
+            <div class="container-fluid">
+                <a class="navbar-brand text-reset" href="#" style="font-size:2rem">Grupo Pierola Romania</a>
+            </div>
+        </div>
+          {% include 'headers/other_than_mobile.html' %}
+        
+      </header>
+    
     {% block content %}
     {% endblock %}
     {% block extra_js%}
