--- a/templates/base.html
+++ b/templates/base.html
@@ -13,16 +13,58 @@
     <title>GPR {%block title %}{% endblock %}</title>
   </head>
   <body class="text-white" style="background-color: black;">
-      <header >
-        <div class="navbar">
-            <div class="container-fluid">
-                <a class="navbar-brand text-reset" href="#" style="font-size:2rem">Grupo Pierola Romania</a>
-            </div>
-        </div>
-          {% include 'headers/other_than_mobile.html' %}
-        
-      </header>
-    
+<nav class="navbar navbar-expand-lg d-none d-md-block">
+  <div class="container-fluid">
+    <a class="navbar-brand text-white" href="#" style="font-size: 2rem;">Grupo Pierola Romania</a>
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link text-white" href="#">0.00 RON <i class="fas fa-shopping-cart"></i></a>
+        </li>
+    </ul>
+  </div>
+</nav>
+<nav class="navbar navbar-expand-lg">
+  <div class="container-fluid">
+    <a class="navbar-brand text-white d-md-none" href="#">Grupo Pierola Romania</a>
+    <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Vinuri
+          </a>
+          <ul class="dropdown-menu text-center rounded-0 m-0 " style="background-color: black;" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item text-white" href="#">Rosii</a></li>
+            <li><a class="dropdown-item text-white" href="#">Rose</a></li>
+            <li><a class="dropdown-item text-white" href="#">Albe</a></li>
+          </ul>
+        </li>
+         <li class="nav-item">
+            <a class="nav-link text-white" href="#">Oferte si Promotii</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-white" href="#">Contact</a>
+        </li>
+        <li class="nav-item d-md-none">
+            <a class="nav-link text-white" href="#">0.00 RON <i class="fas fa-shopping-cart"></i></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-white" href="#">
+                <form>
+                    <div class="input-group input-group-sm">
+                        <input type="text" name="q" class="form-control text-white rounded-0 border-start-0 border-end-0    border-top-0 border-white" placeholder="Cauta un vin" style="background-color:black;">
+                        <button type="submit" class="btn btn-small text-white"><i class="fas fa-search"></i></button>
+                    </div>
+                </form>
+            </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<hr class="text-white mt-0">
     {% block content %}
     {% endblock %}
     {% block extra_js%}
