--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,7 @@
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+           <i class="fas fa-wine-glass-alt"></i>
             Vinuri
           </a>
           <ul class="dropdown-menu text-center rounded-0 m-0 " style="background-color: black;" aria-labelledby="navbarDropdown">
@@ -42,16 +43,22 @@
           </ul>
         </li>
          <li class="nav-item">
-            <a class="nav-link text-white" href="#">Oferte si Promotii</a>
+            <a class="nav-link text-white" href="#">
+                <i class="fas fa-gifts"></i>
+                Oferte si Promotii
+            </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" href="#">Contact</a>
+            <a class="nav-link text-white" href="#">
+                <i class="far fa-comment-alt"></i>
+                Contact
+            </a>
         </li>
         <li class="nav-item d-md-none">
             <a class="nav-link text-white" href="#">0.00 RON <i class="fas fa-shopping-cart"></i></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" href="#">
+            <a class="nav-link text-white p-0" href="#">
                 <form>
                     <div class="input-group input-group-sm">
                         <input type="text" name="q" class="form-control text-white rounded-0 border-start-0 border-end-0    border-top-0 border-white" placeholder="Cauta un vin" style="background-color:black;">
