--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -8,6 +9,8 @@
     {% endblock %}
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+
     <script src="https://kit.fontawesome.com/8e8a0aa5cf.js" crossorigin="anonymous"></script>
 
     <title>GPR {%block title %}{% endblock %}</title>
@@ -36,10 +39,10 @@
            <i class="fas fa-wine-glass-alt"></i>
             Vinuri
           </a>
-          <ul class="dropdown-menu text-center rounded-0 m-0 " style="background-color: black;" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item text-white" href="#">Rosii</a></li>
-            <li><a class="dropdown-item text-white" href="#">Rose</a></li>
-            <li><a class="dropdown-item text-white" href="#">Albe</a></li>
+          <ul class="dropdown-menu text-center rounded-0 m-0 wines-dropdown" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item wine-color" href="#">Rosii</a></li>
+            <li><a class="dropdown-item wine-color" href="#">Rose</a></li>
+            <li><a class="dropdown-item wine-color" href="#">Albe</a></li>
           </ul>
         </li>
          <li class="nav-item">
