--- a/templates/base.html
+++ b/templates/base.html
@@ -15,71 +15,83 @@
 
     <title>GPR {%block title %}{% endblock %}</title>
   </head>
-  <body class="text-white" style="background-color: black;">
-<nav class="navbar navbar-expand-lg d-none d-md-block">
-  <div class="container-fluid">
-    <a class="navbar-brand text-white" href="#" style="font-size: 2rem;">Grupo Pierola Romania</a>
-    <ul class="navbar-nav">
-        <li class="nav-item">
-            <a class="nav-link text-white" href="#">0.00 RON <i class="fas fa-shopping-cart"></i></a>
-        </li>
-    </ul>
-  </div>
-</nav>
-<nav class="navbar navbar-expand-lg">
-  <div class="container-fluid">
-    <a class="navbar-brand text-white d-md-none" href="#">Grupo Pierola Romania</a>
-    <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-           <i class="fas fa-wine-glass-alt"></i>
-            Vinuri
-          </a>
-          <ul class="dropdown-menu text-center rounded-0 m-0 wines-dropdown" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item wine-color" href="#">Rosii</a></li>
-            <li><a class="dropdown-item wine-color" href="#">Rose</a></li>
-            <li><a class="dropdown-item wine-color" href="#">Albe</a></li>
-          </ul>
-        </li>
-         <li class="nav-item">
-            <a class="nav-link text-white" href="#">
-                <i class="fas fa-gifts"></i>
-                Oferte si Promotii
-            </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link text-white" href="#">
-                <i class="far fa-comment-alt"></i>
-                Contact
-            </a>
-        </li>
-        <li class="nav-item d-md-none">
-            <a class="nav-link text-white" href="#">0.00 RON <i class="fas fa-shopping-cart"></i></a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link text-white p-0" href="#">
-                <form>
-                    <div class="input-group input-group-sm">
-                        <input type="text" name="q" class="form-control text-white rounded-0 border-start-0 border-end-0    border-top-0 border-white" placeholder="Cauta un vin" style="background-color:black;">
-                        <button type="submit" class="btn btn-small text-white"><i class="fas fa-search"></i></button>
-                    </div>
-                </form>
-            </a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-<hr class="text-white mt-0">
+  <body class="text-white">
+    <header class="fixed-top">
+         <!-- Lg desktop header-->
+        <nav class="navbar navbar-expand-lg d-none d-lg-block bg-black p-0">
+            <div class="container-fluid">
+                <a class="navbar-brand text-white pt-3 brand" href="{% url 'home' %}" >Grupo Pierola Romania</a>
+                <ul class="navbar-nav font-header">
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#">0.00 RON <i class="fas fa-shopping-cart"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <!-- Tablet and less header-->
+        <nav class="navbar navbar-expand-lg menu bg-black p-0">
+            <div class="container-fluid">
+                <!-- Brand -->
+                <a class="navbar-brand text-white d-lg-none m-0 brand" href="#">Grupo Pierola Romania</a>
+                <!-- Menu Button-->
+                <button class="navbar-toggler navbar-dark p-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <!-- List of menu option-->
+                <div class="collapse navbar-collapse justify-content-end font-header" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <!-- Dropdown menu option-->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fas fa-wine-glass-alt"></i>
+                                Vinuri
+                            </a>
+                            <ul class="dropdown-menu text-center rounded-0 m-0 wines-dropdown bg-black bg-gradient" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item wine-color" href="#">Rosii</a></li>
+                                <li><a class="dropdown-item wine-color" href="#">Rose</a></li>
+                                <li><a class="dropdown-item wine-color" href="#">Albe</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">
+                                <i class="fas fa-gifts"></i>
+                                Oferte si Promotii
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">
+                                <i class="far fa-comment-alt"></i>
+                                Contact
+                            </a>
+                        </li>
+                        <li class="nav-item d-md-none">
+                            <a class="nav-link text-white" href="#">0.00 RON <i class="fas fa-shopping-cart"></i></a>
+                        </li>
+                        <!-- Search bar -->
+                        <li class="nav-item">
+                            <a class="nav-link text-white p-0" href="#">
+                                <form>
+                                    <div class="input-group input-group-sm">
+                                        <input type="text" name="q" class="form-control text-white rounded-0 border-start-0 border-end-0    border-top-0 border-white" placeholder="Cauta un vin" style="background-color:black;">
+                                        <button type="submit" class="btn btn-small text-white"><i class="fas fa-search"></i></button>
+                                    </div>
+                                </form>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <hr class="text-white mt-0">
+    </header>
+    
+    <div class="container">
     {% block content %}
-    {% endblock %}
+        {% endblock %}
+    </div>
     {% block extra_js%}
     {% endblock %}
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-
   </body>
 </html>
