--- a/templates/base.html
+++ b/templates/base.html
@@ -2,16 +2,20 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    {% block extra_css %}
-
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+   
+    {% block corecss %}
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
     {% endblock %}
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+    {% block extra_css %}
+    {% endblock %}
 
     <script src="https://kit.fontawesome.com/8e8a0aa5cf.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
     <title>GPR {%block title %}{% endblock %}</title>
   </head>
@@ -47,6 +51,7 @@
                                 Vinuri
                             </a>
                             <ul class="dropdown-menu text-center rounded-0 m-0 wines-dropdown bg-black bg-gradient" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item wine-color" href="{% url 'wines_view' %}">Toate</a></li>
                                 <li><a class="dropdown-item wine-color" href="#">Rosii</a></li>
                                 <li><a class="dropdown-item wine-color" href="#">Rose</a></li>
                                 <li><a class="dropdown-item wine-color" href="#">Albe</a></li>
@@ -84,14 +89,13 @@
         </nav>
         <hr class="text-white mt-0">
     </header>
-    
-    <div class="container">
     {% block content %}
         {% endblock %}
-    </div>
     {% block extra_js%}
     {% endblock %}
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   </body>
 </html>
+{% block postload_js %}
+{% endblock %}
