--- a/wines/templates/wines/wines.html
+++ b/wines/templates/wines/wines.html
@@ -1,4 +1,107 @@
 {% extends "base.html" %}
+{% load static %}
+{% block extra_css %}
+  <link type="text/css" rel="stylesheet" href="{% static 'wines/css/wines.css' %}">
+{% endblock %}
 {% block content %}
- <h1>This is the Wine Page</h1>
+<div class="container-fluid">
+     <div class="wine-filter-menu fixed-top">
+         <h4 class="text-center my-2">Ordoneaza dupa</h4>
+         <div class="container">
+                <div class="row mb-1">
+                    <div class="col-12">
+                        <div class="form-floating text-dark">
+                            <select class="form-select" id="color" aria-label="Floating label select example">
+                                <option value="reset">Oricare</option>
+                                <option value="Red" {% if 'Red' in categories %}selected{% endif %}>Rosii</option>
+                                <option value="Rose"{% if 'Rose' in categories %}selected{% endif %}>Rose</option>
+                                <option value="White"{% if 'White' in categories %}selected{% endif %}>Albe</option>
+                            </select>
+                            <label for="color">Culoare</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mb-1">
+                    <div class="col-12">
+                        <div class="form-floating text-dark">
+                            <select class="form-select" id="region" aria-label="Floating label select example">
+                                <option value="reset">Oricare</option>
+                                {% for region in regions%}
+                                    <option value="{{region.name}}"{% if region.name in categories %}selected{% endif %}>{{region.name}}</option>
+                                {% endfor %}
+                            </select>
+                            <label for="region">Regiunea</label>
+                        </div>
+                    </div>
+                </div>
+                 <div class="row mb-1">
+                    <div class="col-12">
+                        <div class="form-floating text-dark">
+                            <select class="form-select" id="grape">
+                                <option value="reset">Oricare</option>
+                                {% for grape in grapes %}
+                                    <option value="{{grape.name}}"{% if grape.name in categories %}selected{% endif %}>{{grape.name}}</option>
+                                {% endfor %}
+                            </select>
+                            <label for="grape">Struguri</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mb-1">
+                    <div class="col-12">
+                        <div class="form-floating text-dark">
+                            <select class="form-select" id="price" aria-label="Floating label select example">
+                                <option value="reset">Aleatoriu</option>
+                                <option value="price_asc" {% if 'price_asc' in categories %}selected{% endif %}>Ordoneaza Ascendent</option>
+                                <option value="price_desc" {% if 'price_desc' in categories %}selected{% endif %}>Ordoneaza descendent</option>
+
+                            </select>
+                            <label for="price">Pret</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mb-1">
+                    <div class="col-12">
+                        <div class="form-floating text-dark">
+                            <select class="form-select" id="rating" aria-label="Floating label select example">
+                                <option value="reset" selected>Aleatoriu</option>
+                                <option value="rating_asc" {% if 'rating_asc' in categories %}selected{% endif %}>Ordoneaza Ascendent</option>
+                                <option value="rating_desc" {% if 'rating_desc' in categories %}selected{% endif %}>Ordoneaza descendent</option>
+
+                            </select>
+                            <label for="rating">Rating</label>
+                        </div>
+                    </div>
+                </div>
+         </div>
+     </div>
+     <div class="wine-list">
+        <div class="row">
+            <h1 class="text-center">Vinuri</h1>
+            {% for wine in wines%}
+            <div class="col-12">
+                {{wine}}
+            </div>
+            {% endfor %}
+        </div>
+     </div>
+</div>
 {% endblock%}
+{% block postload_js %}
+<script type="text/javascript">
+    $('select').change(function(){
+        var selector = $(this).attr('id');
+        var selectedVal = $(this).val();
+        var currentUrl = new URL(window.location);
+
+        if (selectedVal !='reset'){
+            currentUrl.searchParams.set(selector, selectedVal);
+            window.location.replace(currentUrl);
+
+        }else{
+            currentUrl.searchParams.delete(selector);
+            window.location.replace(currentUrl);
+        }
+    })
+</script>
+{% endblock %}
