--- a/templates/base.html
+++ b/templates/base.html
@@ -19,24 +19,24 @@
 
     <title>GPR {%block title %}{% endblock %}</title>
   </head>
-  <body class="text-white">
-    <header class="fixed-top">
+  <body>
+    <header class="fixed-top bg-white top-index">
          <!-- Lg desktop header-->
-        <nav class="navbar navbar-expand-lg d-none d-lg-block bg-black p-0">
+        <nav class="navbar navbar-expand-lg d-none d-lg-block p-0">
             <div class="container-fluid">
-                <a class="navbar-brand text-white pt-3 brand" href="{% url 'home' %}" >Grupo Pierola Romania</a>
+                <a class="navbar-brand text-dark pt-3 brand" href="{% url 'home' %}" >Grupo Pierola Romania</a>
                 <ul class="navbar-nav font-header">
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">0.00 RON <i class="fas fa-shopping-cart"></i></a>
+                        <a class="nav-link text-dark" href="#">0.00 RON <i class="fas fa-shopping-cart"></i></a>
                     </li>
                 </ul>
             </div>
         </nav>
         <!-- Tablet and less header-->
-        <nav class="navbar navbar-expand-lg menu bg-black p-0">
+        <nav class="navbar navbar-expand-lg menu p-0 ">
             <div class="container-fluid">
                 <!-- Brand -->
-                <a class="navbar-brand text-white d-lg-none m-0 brand" href="#">Grupo Pierola Romania</a>
+                <a class="navbar-brand  d-lg-none m-0 brand" href="#">Grupo Pierola Romania</a>
                 <!-- Menu Button-->
                 <button class="navbar-toggler navbar-dark p-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -46,11 +46,11 @@
                     <ul class="navbar-nav">
                         <!-- Dropdown menu option-->
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="fas fa-wine-glass-alt"></i>
                                 Vinuri
                             </a>
-                            <ul class="dropdown-menu text-center rounded-0 m-0 wines-dropdown bg-black bg-gradient" aria-labelledby="navbarDropdown">
+                            <ul class="dropdown-menu text-center rounded-0 m-0 wines-dropdown bg-black bg-gradient " aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item wine-color" href="{% url 'wines_view' %}">Toate</a></li>
                                 <li><a class="dropdown-item wine-color" href="#">Rosii</a></li>
                                 <li><a class="dropdown-item wine-color" href="#">Rose</a></li>
@@ -58,27 +58,27 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">
+                            <a class="nav-link text-dark" href="#">
                                 <i class="fas fa-gifts"></i>
                                 Oferte si Promotii
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">
+                            <a class="nav-link text-dark " href="#">
                                 <i class="far fa-comment-alt"></i>
                                 Contact
                             </a>
                         </li>
-                        <li class="nav-item d-md-none">
-                            <a class="nav-link text-white" href="#">0.00 RON <i class="fas fa-shopping-cart"></i></a>
+                        <li class="nav-item d-md-none text-dark">
+                            <a class="nav-link " href="#">0.00 RON <i class="fas fa-shopping-cart"></i></a>
                         </li>
                         <!-- Search bar -->
                         <li class="nav-item">
-                            <a class="nav-link text-white p-0" href="#">
+                            <a class="nav-link  p-0" href="#">
                                 <form>
                                     <div class="input-group input-group-sm">
-                                        <input type="text" name="q" class="form-control text-white rounded-0 border-start-0 border-end-0    border-top-0 border-white" placeholder="Cauta un vin" style="background-color:black;">
-                                        <button type="submit" class="btn btn-small text-white"><i class="fas fa-search"></i></button>
+                                        <input type="text" name="q" class="form-control text-dark rounded-0 border-start-0 border-end-0    border-top-0 bg-danger" placeholder="Cauta un vin" >
+                                        <button type="submit" class="btn btn-small text-dark"><i class="fas fa-search"></i></button>
                                     </div>
                                 </form>
                             </a>
@@ -87,7 +87,6 @@
                 </div>
             </div>
         </nav>
-        <hr class="text-white mt-0">
     </header>
     {% block content %}
         {% endblock %}
